--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       @import url('//cdn.rawgit.com/arcticicestudio/nord/develop/src/nord.css');
       @import url('//cdn.jsdelivr.net/gh/be5invis/Iosevka@ff81c66/fonts.css');
     </style>
-    <script src="simplex-noise.js"></script>
+    <!-- <script src="simplex-noise.js"></script> -->
   </head>
   
   <body>
@@ -53,6 +53,6 @@
       >
     </noscript>
     <div id="app"></div>
-    <script src="motion.js"></script>
+    <!-- <script src="motion.js"></script> -->
   </body>
 </html>
