--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="Figma.Cool 是一个有着众多高质量 Figma 资源、插件和教程文章的 Figma 共享平台，For Figma, For Everyone。">
+    <meta name="keywords" content="figma资源, figma插件, figma教程, figma, figma resources, figma tutorial, figma plugins, design, design tools, ux, ui, user experience design, collaboration, design editor, constraints, vectors, vector editor, svg, user interface design">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-98374033-11"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-98374033-11');
+    </script>
     <script>
       (function(d) {
         var config = {
