--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="description" content="Figma.Cool 是一个有着众多高质量 Figma 资源、插件和教程文章的 Figma 共享平台，For Figma, For Everyone。">
     <meta name="keywords" content="figma资源, figma插件, figma教程, figma, figma resources, figma tutorial, figma plugins, design, design tools, ux, ui, user experience design, collaboration, design editor, constraints, vectors, vector editor, svg, user interface design">
+    <script src="simplex-noise.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -57,7 +58,7 @@
       @import url('//cdn.rawgit.com/arcticicestudio/nord/develop/src/nord.css');
       @import url('//cdn.jsdelivr.net/gh/be5invis/Iosevka@ff81c66/fonts.css');
     </style>
-    <script src="simplex-noise.js"></script>
+    <script src="https://embed.small.chat/T45TKBVFWG013K6GN9T6.js" async></script>
   </head>
 
   <body>
