--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="description" content="Figma.Cool 是一个有着众多高质量 Figma 资源、插件和教程文章的 Figma 共享平台，For Figma, For Everyone。">
-    <meta name="keywords" content="figma资源, figma插件, figma教程, figma, figma resources, figma tutorial, figma plugins, design, design tools, ux, ui, user experience design, collaboration, design editor, constraints, vectors, vector editor, svg, user interface design">
+    <meta name="description" content="Figma.Cool 是一个致力于在国内推广 Figma 的组织，这里有 Figma 汉化补丁、众多优质设计资源、Figma 插件推荐和我们开发的提高设计效率的插件，For Figma, For Everyone。">
+    <meta name="keywords" content="figma中文, figma汉化, figma资源, figma插件, figma教程, figma, figma resources, figma tutorial, figma plugins, design, design tools, ux, ui, user experience design, collaboration, design editor, constraints, vectors, vector editor, svg, user interface design">
     <script src="simplex-noise.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
