fixed(bug): fixed emoji listener bug, fixed earth bug, add webworker

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="description" content="Figma.Cool 是一个致力于在国内推广 Figma 的组织，这里有 Figma 汉化补丁、众多优质设计资源、Figma 插件推荐和我们开发的提高设计效率的插件，For Figma, For Everyone。">
     <meta name="keywords" content="figma中文, figma汉化, figma资源, figma插件, figma教程, figma, figma resources, figma tutorial, figma plugins, design, design tools, ux, ui, user experience design, collaboration, design editor, constraints, vectors, vector editor, svg, user interface design">
-    <script src="simplex-noise.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -39,6 +38,6 @@
       >
     </noscript>
     <div id="app"></div>
-    <script src="motion.js"></script>
+    <script src="motion-worker.js"></script>
   </body>
 </html>
